crates/sith_python_parser/tests/snapshots/valid_syntax@param_with_star_annotation.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/ok/param_with_star_annotation.py
---
## AST

```
Module(
    ModModule {
        range: 0..67,
        body: [
            FunctionDef(
                FunctionDefStmt {
                    range: 0..32,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 4..7,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 7..26,
                        posonlyargs: [],
                        args: [],
                        vararg: Some(
                            Parameter {
                                range: 8..25,
                                name: Identifier {
                                    id: Name("args"),
                                    range: 9..13,
                                },
                                annotation: Some(
                                    Starred(
                                        StarredExpr {
                                            range: 15..25,
                                            value: BinOp(
                                                BinOpExpr {
                                                    range: 16..25,
                                                    left: Name(
                                                        NameExpr {
                                                            range: 16..19,
                                                            id: Name("int"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    op: BitOr,
                                                    right: Name(
                                                        NameExpr {
                                                            range: 22..25,
                                                            id: Name("str"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                },
                                            ),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                            },
                        ),
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            ExprStmt {
                                range: 28..31,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 28..31,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                FunctionDefStmt {
                    range: 32..67,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 36..39,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 39..61,
                        posonlyargs: [],
                        args: [],
                        vararg: Some(
                            Parameter {
                                range: 40..60,
                                name: Identifier {
                                    id: Name("args"),
                                    range: 41..45,
                                },
                                annotation: Some(
                                    Starred(
                                        StarredExpr {
                                            range: 47..60,
                                            value: BoolOp(
                                                BoolOpExpr {
                                                    range: 49..59,
                                                    op: Or,
                                                    values: [
                                                        Name(
                                                            NameExpr {
                                                                range: 49..52,
                                                                id: Name("int"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        Name(
                                                            NameExpr {
                                                                range: 56..59,
                                                                id: Name("str"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                    ],
                                                },
                                            ),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                            },
                        ),
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            ExprStmt {
                                range: 63..66,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 63..66,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
